--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,12 +29,20 @@
     "prettier"
   ],
   "rules": {
+    "camelcase": 0,
     "react-hooks/rules-of-hooks": "error",
+    "react/jsx-one-expression-per-line": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, {
       "extensions": [".tsx"]
     }],
     "import/prefer-default-export": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
