--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
     "camelcase": 0,
     "react-hooks/rules-of-hooks": "error",
     "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, {
       "extensions": [".tsx"]
