--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
     "react-hooks/exhaustive-deps": "warn",
+    "no-unused-expressions": "off",
+    "@typescript-eslint/ban-types": "off",
     "react/jsx-filename-extension": [1, {
       "extensions": [".tsx"]
     }],
