Chore: Add no-duplicates rule for eslint.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
       "extensions": [".tsx"]
     }],
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
